[tool.poetry]
name = "iterwiki"
version = "0.1.0"
description = "A set of tools for downloading and iterating over Wikipedia data"
authors = ["Rowan Copley <git@rowan.earth>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
tqdm = "^4.61.0"
beautifulsoup4 = "^4.9.3"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
